--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,55 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+@use './m3-theme' as schockenTheme;
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the theme object.
+//$schocken-frontend-theme: mat.define-theme((
+//  color: (
+//    theme-type: light,
+//    primary: mat.$green-palette,
+//    tertiary: mat.$blue-palette,
+//  ),
+//  density: (
+//    scale: 0,
+//  )
+//));
+$schocken-frontend-theme: schockenTheme.$light-theme;
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+:root {
+  @include mat.all-component-themes($schocken-frontend-theme);
+
+  .secondary-slide-toggle {
+    @include mat.slide-toggle-color($schocken-frontend-theme, $color-variant: secondary);
+  }
+
+  .secondary-slide-toggle {
+    @include mat.checkbox-color($schocken-frontend-theme, $color-variant: secondary);
+  }
+
+  .mat-toolbar {
+    --mat-toolbar-container-text-color: #{mat.get-theme-color($schocken-frontend-theme, primary, 100)};
+    --mat-toolbar-container-background-color: #{mat.get-theme-color($schocken-frontend-theme, primary)};
+    --mdc-icon-button-icon-color: #{mat.get-theme-color($schocken-frontend-theme, primary, 100)};
+  }
+}
+
+// Comment out the line below if you want to use the pre-defined typography utility classes.
+// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
+// @include mat.typography-hierarchy($schocken-frontend-theme);
+
+// Comment out the line below if you want to use the deprecated `color` inputs.
+// @include mat.color-variants-backwards-compatibility($schocken-frontend-theme);
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
