--- a/src/app/administration/event-type-administration/event-type-administration.component.html
+++ b/src/app/administration/event-type-administration/event-type-administration.component.html
@@ -11,11 +11,11 @@
 
   <ng-container matColumnDef="context">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Kontext</th>
-    <td mat-cell *matCellDef="let element">{{element.context}}</td>
+    <td mat-cell *matCellDef="let element">{{element.context | contextToLabel}}</td>
   </ng-container>
 
   <ng-container matColumnDef="penalty">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Strafe</th>
+    <th mat-header-cell *matHeaderCellDef>Strafe</th>
     <td mat-cell *matCellDef="let element">
       @if (element.penaltyValue && element.penaltyUnit) {
         <hop-penalty-with-unit [penalty]="element.penaltyValue" [unit]="element.penaltyUnit" [multiplicatorUnit]="element.multiplicatorUnit"></hop-penalty-with-unit>
