--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<button mat-fab class="hop-fab-button">
+<button mat-fab class="hop-fab-button" (click)="createNewGame()">
   <mat-icon>add</mat-icon>
 </button>
 
