--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,6 +9,18 @@ mat-accordion {
   align-items: center;
   padding: 15px 0;
 
+  .game-detail-info-container {
+    display: flex;
+    align-items: center;
+
+    .game-detail-info-item {
+      &:not(:last-of-type):after {
+        content: "•";
+        padding: 0 10px;
+      }
+    }
+  }
+
   .game-action-button-container {
     button {
       margin-left: 5px;
