--- a/src/app/game/edit-attendance-dialog/edit-attendance-dialog.component.html
+++ b/src/app/game/edit-attendance-dialog/edit-attendance-dialog.component.html
@@ -1,1 +1,20 @@
-<p>edit-attendance-dialog works!</p>
+<h2 mat-dialog-title>Teilnahmen anpassen</h2>
+<mat-dialog-content>
+  @if (data.disabledIds.length) {
+    <hop-info-box message="Eine Teilnahme kann nur entfernt werden, falls der Spieler nicht im Finale ist und kein Ereignis in dieser Runde hat."></hop-info-box>
+  }
+  <mat-selection-list [(ngModel)]="selectedOptions">
+    @for (player of data.players; track player.id) {
+      <mat-list-option
+        [value]="player.id"
+        [disabled]="data.disabledIds.includes(player.id)"
+        [togglePosition]="'before'">
+        {{player.name}}
+      </mat-list-option>
+    }
+  </mat-selection-list>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Abbrechen</button>
+  <button mat-flat-button (click)="save()">Speichern</button>
+</mat-dialog-actions>
