game detail view (WIP)

--- a/src/app/game/celebration-dialog/celebration-dialog.component.html
+++ b/src/app/game/celebration-dialog/celebration-dialog.component.html
@@ -1,9 +1,12 @@
 <h2 mat-dialog-title>🎉Es gibt etwas zu feiern...🎉</h2>
 <mat-dialog-content>
-  <h2>{{data.celebration.label}}</h2>
-  <div class="counter">
+  <h2 class="mat-headline-5">{{data.celebration.label}}</h2>
+  <div class="mat-headline-1">
     <hop-odometer [countTo]="data.celebration.count"></hop-odometer>
   </div>
+  <button mat-fab (click)="celebrate($event)">
+    <mat-icon>celebration</mat-icon>
+  </button>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-flat-button mat-dialog-close (click)="celebrate($event)">Prost!</button>
