--- a/src/app/game/add-event-dialog/add-event-dialog.component.html
+++ b/src/app/game/add-event-dialog/add-event-dialog.component.html
@@ -1,12 +1,15 @@
 <h2 mat-dialog-title>Neues Ereignis</h2>
 <mat-dialog-content>
-  @for (eventType of favoriteEventTypes; track eventType.id) {
+  @for (eventType of favoriteEventTypes; track eventType.id; let isLast = $last) {
     <hop-add-event-form
       [eventType]="eventType"
       (onAddEvent)="handleEventAdded($event)"
     ></hop-add-event-form>
+    @if (!isLast) {
+      <mat-divider></mat-divider>
+    }
   }
-  <mat-form-field class="full-width">
+  <mat-form-field class="full-width margin-top">
     <mat-label>Weitere Ereignisse suchen</mat-label>
     <mat-select [(ngModel)]="selectedEventType">
       @for (eventType of otherEventTypes; track eventType.id) {
