--- a/src/app/game/add-event-dialog/add-event-form/add-event-form.component.html
+++ b/src/app/game/add-event-dialog/add-event-form/add-event-form.component.html
@@ -1,23 +1,31 @@
-<form [formGroup]="form">
-  {{ eventType().description }}
+<form [formGroup]="form" class="form-container">
   @if (eventType().penaltyValue && eventType().penaltyUnit) {
-    @if (eventType().multiplicatorUnit) {
-      <mat-form-field class="full-width">
-        <mat-label>{{eventType().multiplicatorUnit}}</mat-label>
-        <input matInput formControlName="multiplicatorValue" type="number">
-        <span matTextSuffix>á <hop-penalty-with-unit [unit]="eventType().penaltyUnit!" [penalty]="eventType().penaltyValue!"></hop-penalty-with-unit></span>
-      </mat-form-field>
-    }
+    <div class="form-row">
+      {{ eventType().description }}
+      @if (eventType().multiplicatorUnit) {
+        <mat-form-field>
+          <mat-label>{{eventType().multiplicatorUnit}}</mat-label>
+          <input matInput formControlName="multiplicatorValue" type="number">
+          <span matTextSuffix>á <hop-penalty-with-unit [unit]="eventType().penaltyUnit!" [penalty]="eventType().penaltyValue!"></hop-penalty-with-unit></span>
+        </mat-form-field>
+      }
 
-    @if (eventType().hasComment) {
-      <mat-form-field class="full-width">
-        <mat-label>Kommentar</mat-label>
-        <input matInput formControlName="comment">
-      </mat-form-field>
-    }
+      @if (eventType().hasComment) {
+        <mat-form-field class="full-width">
+          <mat-label>Kommentar</mat-label>
+          <input matInput formControlName="comment">
+        </mat-form-field>
+      }
+    </div>
 
     <button mat-stroked-button [disabled]="!form.valid" (click)="saveEvent()">
+      <mat-icon>add</mat-icon>
       <hop-penalty-with-unit [unit]="eventType().penaltyUnit!" [penalty]="eventType().penaltyValue! * (form.value.multiplicatorValue || 1)"></hop-penalty-with-unit>
+    </button>
+  } @else {
+    {{ eventType().description }}
+    <button mat-stroked-button class="no-text-button" (click)="saveEvent()">
+      <mat-icon>add</mat-icon>
     </button>
   }
 </form>
