--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,8 @@ $schocken-frontend-theme: schockenTheme.$light-theme;
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
+@include mat.all-component-typographies();
+
 :root {
   @include mat.all-component-themes($schocken-frontend-theme);
 
