--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -28,6 +28,10 @@
       <mat-icon>edit</mat-icon>
       bearbeiten
     </button>
+
+    @if ('game-details' | isLoading | async) {
+      <mat-spinner diameter="30" strokeWidth="2"></mat-spinner>
+    }
   </div>
 
   <mat-stepper orientation="vertical" #stepper>
@@ -46,7 +50,10 @@
           Feststellungen
         </div>
         <div class="penalty-sum-container">
-          @if (game.penalties && game.penalties.length) {
+          @if ('game-events' | isLoading | async) {
+            <mat-spinner diameter="30" strokeWidth="2"></mat-spinner>
+          }
+          @else if (game.penalties && game.penalties.length) {
             @for (penalty of game.penalties; track penalty.unit; let idx = $index) {
               @if (idx > 0) {
                 <span>/</span>
@@ -59,6 +66,9 @@
         </div>
       </ng-template>
       <ng-template matStepContent>
+        @if ('game-events' | isLoading | async) {
+          <hop-loading-mask></hop-loading-mask>
+        }
         <hop-event-list
           [context]="Context.Game"
           [players]="(playersForGameEvents$ | async) || []"
@@ -82,7 +92,9 @@
             }
           </div>
           <div class="penalty-sum-container">
-            @if (round.penalties && round.penalties.length) {
+            @if (round.id | isLoading | async) {
+              <mat-spinner diameter="30" strokeWidth="2"></mat-spinner>
+            } @else if (round.penalties && round.penalties.length) {
               @for (penalty of round.penalties; track penalty.unit; let idx = $index) {
                 @if (idx > 0) {
                   <span>/</span>
@@ -95,6 +107,9 @@
           </div>
         </ng-template>
         <ng-template matStepContent>
+          @if (round.id | isLoading | async) {
+            <hop-loading-mask></hop-loading-mask>
+          }
           <hop-round
             [round]="round"
             [players]="(players$ | async) || []"
@@ -113,13 +128,21 @@
 
   @if (!game.completed) {
     <button mat-flat-button (click)="startNewRound()">
-      <mat-icon>add</mat-icon>
+      @if ('start-new-round' | isLoading | async) {
+        <mat-icon><mat-spinner class="white-spinner" diameter="15"></mat-spinner></mat-icon>
+      } @else {
+        <mat-icon>add</mat-icon>
+      }
       Neue Runde
     </button>
 
     <div>
       <button mat-flat-button (click)="setGameCompleted($event)">
-        <mat-icon>check</mat-icon>
+        @if ('complete-game' | isLoading | async) {
+          <mat-icon><mat-spinner class="white-spinner" diameter="15"></mat-spinner></mat-icon>
+        } @else {
+          <mat-icon>check</mat-icon>
+        }
         Spiel abschließen
       </button>
     </div>
